--- a/flow/changelog
+++ b/flow/changelog
@@ -1,3 +1,17 @@
+* 2024-01-19
+ - Acknowledge cancelled helpcall with spoken message.
+
+* 2024-01-17
+ - Added support for Theben LUXORliving Scenes
+ - LUXORliving Panic and Central off customization see THEBEN PANIC SCENE group
+ - Gerneric Gateway: disconnect the sample Command handler flow
+
+* 2024-01-05
+ - Gerneric Gateway: initiate with richer sample data, changed the fake Query handler
+
+* 2024-01-01
+ - proServ Gateway: allow ' character in room names
+
 * 2023-12-31
  - Allow the ' character (as in `salle d'eau`) in siteIds - needs more testing
 
