--- a/maestro/aragon-ai/changelog
+++ b/maestro/aragon-ai/changelog
@@ -1,3 +1,64 @@
+aragon-ai (1.1.14) stable; urgency=low
+
+  * Spotify: Fixes Sonos timeouts for large playlists by conditionally clearing the queue before adding. This method is transactional, restoring state on failure, and robustly handles different API and search responses.
+
+ -- root <jens@proknx.com>  Tue, 10 Jun 2024 16:00:00 +0100
+ 
+ragon-ai (1.1.13) stable; urgency=low
+
+  * Spotify_keywords_to_remove en, de and fr
+
+ -- root <jens@proknx.com>  Wed, 29 May 2024 08:00:00 +0100
+ 
+aragon-ai (1.1.12) stable; urgency=low
+
+  * Spotify: bug fix, lang parameter to LLM
+  *          support en, de and fr
+  *          delete cache file and retry logic
+
+ -- root <jens@proknx.com>  Wed, 29 May 2024 08:00:00 +0100
+
+aragon-ai (1.1.11) stable; urgency=low
+
+  * Spotify: retry failed sonos playback
+  * Return info on Success (track/album etc)
+  
+ -- root <jens@proknx.com>  Wed, 28 May 2024 11:00:00 +0100
+
+aragon-ai (1.1.10) stable; urgency=low
+
+  * LLM Integration: The LLM prompt was replaced to support a "playlist" media_type and to extract a "room" parameter from user queries.
+
+  * Playlist Functionality: Full support for "playlist" media type was added, including schema updates, output cleaning, and a new Spotify playlist search function with fuzzy matching and error handling.
+
+  * Query Preprocessing: User queries are now cleaned by removing "spotify" and "on spotify" (case-insensitive) before LLM processing.
+
+  * Room Handling: Room detection was enhanced. The system now prioritizes a "room" from the LLM response. If not present, it uses the siteId from the request. Room validation uses fuzzy matching against actual Sonos rooms for robustness.
+
+  * Artist Search: The Spotify artist search was significantly improved by fetching more candidates, trying exact matches first, then using more reliable fuzzy matching, and increasing the matching threshold.
+
+ -- root <jens@proknx.com>  Wed, 27 May 2024 12:00:00 +0100
+
+aragon-ai (1.1.8) stable; urgency=low
+
+  * Spotify Improved error handling and harmonizing API responses.
+  
+ -- root <jens@proknx.com>  Wed, 21 May 2024 17:00:00 +0100
+
+aragon-ai (1.1.7) stable; urgency=low
+
+  * Added media-streaming Spotify
+  
+ -- root <jens@proknx.com>  Tue, 20 May 2024 14:00:00 +0100
+
+aragon-ai (1.1.2) stable; urgency=low
+
+  * whisper-service: rebuild whisper-cli, optimize CPU Affinity (taskset 4 big) and threads 4, set max-len 0 (+faster +accurate) 
+  * set-cpu-performance.service: set 4 big cores to performance
+  * llama-service: added grammars
+  
+ -- root <jens@proknx.com>  Mon, 19 May 2024 10:00:00 +0100
+
 aragon-ai (1.0.20) stable; urgency=low
 
   * llama-service: added cmdline option 'xparameter' to support " --single-turn" for Phi-4
