--- a/maestro/aragon-maestro/changelog
+++ b/maestro/aragon-maestro/changelog
@@ -1,3 +1,44 @@
+aragon-maestro (2.3.4) stable; urgency=low
+
+  * Home automation rules - Improved Save rules handlig, multi-action rule Generate a Test Button for Each Command
+  * Make the rule buttons stack vertically on narrow screens
+  * Avoid rule text overlap buttons
+  * Show error messages for  UNSUPPORTED_RELATIVE_TIME and UNSUPPORTED_REPEAT_LIMIT
+
+ -- root <jens@proknx.com>  Tue, 24 Jun 2025 14:00:00 +0100
+
+aragon-maestro (2.3.2) stable; urgency=low
+
+  * Home automation rules - UX improvements
+
+ -- root <jens@proknx.com>  Mon, 23 Jun 2025 17:00:00 +0100
+
+aragon-maestro (2.3.1) stable; urgency=low
+
+  * Added DEBIAN_FRONTEND=noninteractive to upgrade script
+
+ -- root <jens@proknx.com>  Sat, 21 Jun 2025 07:30:00 +0100
+
+aragon-maestro (2.3.0) stable; urgency=low
+
+  * Added Home Automation rules
+
+ -- root <jens@proknx.com>  Fri, 20 Jun 2025 16:00:00 +0100
+
+aragon-maestro (2.2.11) stable; urgency=low
+
+  * Added Spotify command info to Use section.
+  * Bootstrap 4.6
+  * Fixed scrolling issue on mobile
+
+ -- root <jens@proknx.com>  Sun, 08 Jun 2025 09:00:00 +0100
+
+aragon-maestro (2.2.10) stable; urgency=low
+
+  * Internationalize Wakeword and SED version string
+
+ -- root <jens@proknx.com>  Tue, 25 Mar 2025 15:00:00 +0100
+
 aragon-maestro (2.2.9) stable; urgency=low
 
   * Internationalize all zram strings, added zram statistics
